--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,4 +5,12 @@ S3method(plot,principal.curve)
 S3method(points,principal.curve)
 export(get.lam)
 export(principal.curve)
+importFrom(graphics,lines)
+importFrom(graphics,plot)
+importFrom(graphics,points)
+importFrom(stats,approx)
+importFrom(stats,lowess)
+importFrom(stats,predict)
+importFrom(stats,smooth.spline)
+importFrom(stats,var)
 useDynLib(princurve)
