Fix "found no calls to" note. Solution suggested by https://stackoverflow.com/questions/42313373/r-cmd-check-note-found-no-calls-to-r-registerroutines-r-usedynamicsymbols.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,4 +13,4 @@ importFrom(stats,lowess)
 importFrom(stats,predict)
 importFrom(stats,smooth.spline)
 importFrom(stats,var)
-useDynLib(princurve)
+useDynLib(princurve, .registration=TRUE)
