add whiskers function; extend readme function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,9 +7,11 @@ export(get.lam)
 export(get_lam)
 export(principal.curve)
 export(principal_curve)
+export(whiskers)
 importFrom(graphics,lines)
 importFrom(graphics,plot)
 importFrom(graphics,points)
+importFrom(graphics,segments)
 importFrom(stats,approx)
 importFrom(stats,lowess)
 importFrom(stats,predict)
