install deps with travis-tool.sh

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,8 +18,7 @@ environment:
    USE_RTOOLS: true
 
 build_script:
-  - R -e  "0" --args --bootstrap-packrat
-
+  - travis-tool.sh install_deps
 
 test_script:
   - travis-tool.sh run_tests
