--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,9 @@ S3method(lines,principal_curve)
 S3method(plot,principal_curve)
 S3method(points,principal_curve)
 export(get.lam)
-export(get_lam)
 export(principal.curve)
 export(principal_curve)
+export(project_to_curve)
 export(whiskers)
 importFrom(graphics,lines)
 importFrom(graphics,plot)
