--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,13 @@ sudo: required
 dist: trusty
 cache: packages
 r_check_args: "--as-cran"
+r:
+ - oldrel
+ - release
+ - devel
+os:
+  - linux
+  - osx
 r_packages:
   - covr
   - devtools
