--- a/.travis.yml
+++ b/.travis.yml
@@ -1,22 +1,18 @@
 language: r
-matrix:
-  include:
-    - os: linux
-      dist: trusty
-      sudo: required
-    - os: osx
-      osx_image: 
-        - xcode8.3
-        - xcode9.4
+sudo: required
+dist: trusty
 cache: packages
 r_check_args: "--as-cran"
 r:
  - oldrel
  - release
- - devel
+os:
+ - linux
+ - osx
+osx_image:
+ - xcode9.4
 r_packages:
  - covr
  - devtools
- - testthat
 after_success:
  - R -e 'covr::codecov()'
