--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,12 +9,14 @@ Authors@R: c(
 Description: Fitting a principal curve to a data matrix in arbitrary dimensions.
 License: GPL-2
 Depends: R (>= 3.0)
-Imports: 
+Imports:
   stats,
-  graphics
+  graphics,
+  Rcpp
 Suggests:
   testthat
 NeedsCompilation: yes
 RoxygenNote: 6.0.1
 URL: https://github.com/dynverse/princurve
 BugReports: https://github.com/dynverse/princurve/issues
+LinkingTo: Rcpp
