initial commit of project_to_curve function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,4 +17,4 @@ importFrom(stats,lowess)
 importFrom(stats,predict)
 importFrom(stats,smooth.spline)
 importFrom(stats,var)
-useDynLib(princurve, .registration=TRUE)
+useDynLib(princurve)
