--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(principal.curve)
 export(principal_curve)
 export(project_to_curve)
 export(whiskers)
+import(Rcpp)
 importFrom(graphics,lines)
 importFrom(graphics,plot)
 importFrom(graphics,points)
