--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,13 @@ Authors@R: c(
   person("Trevor", "Hastie", email = "trevor@research.att.com", role = "aut"),
   person("Andreas", "Weingessel", email = "Andreas.Weingessel@ci.tuwien.ac.at", role = "aut"),
   person("Kurt", "Hornik", email = "kurt.hornik@wu.ac.at", role = "aut"),
-  person("Robrecht", "Cannoodt", email = "rcannood@gmail.com", role = c("aut", "cre")))
+  person(
+    "Robrecht", 
+    "Cannoodt", 
+    email = "rcannood@gmail.com", 
+    role = c("aut", "cre"),
+    comment = c(ORCID = "0000-0003-3641-729X", github = "rcannood")
+  ))
 Description: Fitting a principal curve to a data matrix in arbitrary dimensions.
 License: GPL-2
 Depends: R (>= 3.0)
