--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,8 +18,7 @@ Depends: R (>= 3.0)
 Imports:
   stats,
   graphics,
-  Rcpp,
-  RcppArmadillo
+  Rcpp
 Suggests:
   testthat
 NeedsCompilation: yes
