--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,5 +26,4 @@ RoxygenNote: 6.0.1
 URL: https://github.com/dynverse/princurve
 BugReports: https://github.com/dynverse/princurve/issues
 LinkingTo: 
-  Rcpp,
-  RcppArmadillo
+  Rcpp
