--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,20 @@ Title: Fits a Principal Curve in Arbitrary Dimension
 Authors@R: c(
   person("Trevor", "Hastie", email = "trevor@research.att.com", role = "aut"),
   person("Andreas", "Weingessel", email = "Andreas.Weingessel@ci.tuwien.ac.at", role = "aut"),
-  person("Kurt", "Hornik", email = "kurt.hornik@wu.ac.at", role = "aut"),
+  person(
+    "Kurt", 
+    "Hornik", 
+    email = "kurt.hornik@wu.ac.at", 
+    role = "aut",
+    comment = c(ORCID = "0000-0003-4198-9911")
+  ),
+  person(
+    "Henrik", 
+    "Bengtsson", 
+    email = "henrikb@braju.com", 
+    role = "ctb",
+    comment = c(github = "HenrikBengtsson")
+  ),
   person(
     "Robrecht", 
     "Cannoodt", 
