--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,8 +34,9 @@ Imports:
   grDevices,
   Rcpp
 Suggests:
-  testthat,
-  devtools
+  devtools,
+  microbenchmark,
+  testthat
 NeedsCompilation: yes
 RoxygenNote: 6.0.1
 URL: https://github.com/dynverse/princurve
