--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ os:
  - osx
 install:
  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install ffmpeg cairo; fi
- - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; sudo add-apt-repository -y ppa:mc3man/trusty-media; sudo apt-get -qq update; sudo apt-get install -y ffmpeg; fi
+ - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install -y ffmpeg; fi
  - R -e 'if ("devtools" %in% rownames(installed.packages())) update.packages(oldPkgs = "devtools", ask = FALSE) else install.packages("devtools")'
  - R -e 'devtools::install_cran("covr")'
  - R -e 'setRepositories(ind = 1:2); devtools::install(dep = TRUE, upgrade = TRUE)'
