--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,22 +5,19 @@ Authors@R: c(
   person("Trevor", "Hastie", email = "trevor@research.att.com", role = "aut"),
   person("Andreas", "Weingessel", email = "Andreas.Weingessel@ci.tuwien.ac.at", role = "aut"),
   person(
-    "Kurt", 
-    "Hornik", 
+    "Kurt", "Hornik", 
     email = "kurt.hornik@wu.ac.at", 
     role = "aut",
     comment = c(ORCID = "0000-0003-4198-9911")
   ),
   person(
-    "Henrik", 
-    "Bengtsson", 
+    "Henrik", "Bengtsson", 
     email = "henrikb@braju.com", 
     role = "ctb",
     comment = c(github = "HenrikBengtsson")
   ),
   person(
-    "Robrecht", 
-    "Cannoodt", 
+    "Robrecht", "Cannoodt", 
     email = "rcannood@gmail.com", 
     role = c("aut", "cre"),
     comment = c(ORCID = "0000-0003-3641-729X", github = "rcannood")
