--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,10 @@ r_check_args: "--as-cran"
 os:
  - linux
  - osx
+addons:
+  apt:
+    packages:
+    - libmagick++-dev
 install:
  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install ffmpeg cairo; fi
  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install -y ffmpeg; fi
