--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -41,6 +41,7 @@ URL: https://github.com/dynverse/princurve
 BugReports: https://github.com/dynverse/princurve/issues
 Collate: 
     'RcppExports.R'
+    'approx_sorted.R'
     'bias_correct_curve.R'
     'deprecated.R'
     'package.R'
