--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: princurve
-Version: 2.1.3
+Version: 2.1.4.9000
 Title: Fits a Principal Curve in Arbitrary Dimension
 Authors@R: c(
     person("Trevor", "Hastie", email = "trevor@research.att.com", role = "aut"),
@@ -24,6 +24,7 @@ Authors@R: c(
     ))
 Description: Fitting a principal curve to a data matrix in arbitrary dimensions.
 License: GPL-2
+Encoding: UTF-8
 Depends: R (>= 3.0)
 Imports:
     stats,
@@ -41,7 +42,6 @@ URL: https://github.com/dynverse/princurve
 BugReports: https://github.com/dynverse/princurve/issues
 Collate: 
     'RcppExports.R'
-    'approx_sorted.R'
     'bias_correct_curve.R'
     'deprecated.R'
     'package.R'
