--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,13 @@
 language: r
-sudo: required
-dist: trusty
 cache: packages
-r_check_args: "--as-cran"
+r:
+  - oldrel
+  - release
+  - devel
 os:
  - linux
  - osx
-addons:
-  apt:
-    packages:
-    - libmagick++-dev
-install:
- - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install ffmpeg cairo; fi
- - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install -y ffmpeg; fi
- - R -e 'if ("devtools" %in% rownames(installed.packages())) update.packages(oldPkgs = "devtools", ask = FALSE) else install.packages("devtools")'
- - R -e 'devtools::install_cran("covr")'
- - R -e 'setRepositories(ind = 1:2); devtools::install(dep = TRUE, upgrade = TRUE)'
+r_packages:
+ - covr
 after_success:
  - R -e 'covr::codecov()'
