--- a/.github/workflows/r_cmd_check.yml
+++ b/.github/workflows/r_cmd_check.yml
@@ -68,6 +68,11 @@ jobs:
             eval sudo $cmd
           done < <(Rscript -e 'cat(remotes::system_requirements("ubuntu", "16.04"), sep = "\n")')
 
+      - name: Install system dependencies
+        if: runner.os == 'macOS'
+        run: |
+          brew install gcc9
+
       - name: Install dependencies
         run: |
           remotes::install_deps(dependencies = TRUE)
