another attempt at installing gfortran

--- a/.github/workflows/test_coverage.yml
+++ b/.github/workflows/test_coverage.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Install system dependencies
         if: runner.os == 'macOS'
         run: |
-          brew install gcc9
+          brew install gcc@10
 
       - name: Install dependencies
         run: |
